Assessment5/force-app/main/default/objects/Customer__c/fields/Offer_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiry_Days__c</fullName>
    <description>Computed by Apex — days this offer remains valid</description>
    <label>Offer Expiry Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>