Assessment5/force-app/main/default/objects/Customer__c/fields/Offer_Headline__c.field-meta.xml
<CustomField>
    <fullName>Offer_Headline__c</fullName>
    <description>Computed by Apex — pre-formatted offer headline with amount</description>
    <label>Offer Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>