Assessment5/force-app/main/default/objects/Customer__c/fields/Preferred_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Loan_Type__c</fullName>
    <description>Preferred loan type of the customer</description>
    <label>Preferred Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Vehicle Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Education Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>